@@ -3,6 +3,8 @@ Changes
 examples/ex1.pl
 examples/ex2.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -17,10 +19,10 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Unicode-Block-Ascii/00-use.t
-t/Unicode-Block-Ascii/01-version.t
-t/Unicode-Block-Ascii/02-pod_coverage.t
-t/Unicode-Block-Ascii/03-pod.t
+t/Unicode-Block-Ascii/01-use.t
+t/Unicode-Block-Ascii/02-version.t
 t/Unicode-Block-Ascii/04-new.t
 t/Unicode-Block-Ascii/05-next.t
 t/Unicode-Block-Ascii/06-get.t
+xt/Unicode-Block-Ascii/01-pod_coverage.t
+xt/Unicode-Block-Ascii/02-pod.t
